[package]
name = "musical"
version = "0.0.1"
edition = "2021"
authors = ["deotime"]
description = "Musical composition in rust"
repository = "https://github.com/DeoTimeTheGithubUser/music"
license = "MIT"
keywords = ["music"]

[dependencies]
soloud = "1"
thiserror = "1.0.40"
strum = { version = "0.25", features = ["derive"] }